--- a/Ecommerce Project copy/html/contact.html
+++ b/Ecommerce Project copy/html/contact.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Contact us with any questions about guitars, amps, or other inquiries!">
     <title>Contact us</title>
-    <link rel="stylesheet" type="text/css" href="/styles/contact.css">
-    <link rel="preload" as="style" href="/styles/contact.css">
+    <link rel="stylesheet" type="text/css" href="../styles/contact.css">
+    <link rel="preload" as="style" href="../styles/contact.css">
     <script src="https://kit.fontawesome.com/60924b9bc6.js" crossorigin="anonymous"></script>
 
 </head>
